# agents

./: .gitignore  CLAUDE.md  README.md
sre_oncall_triage_agent/: .env.example  .gitignore  ARCHITECTURE.md  README.md  SKILL.md
sre_oncall_triage_agent/FACETS/: alert_quality.md  client_mapping.md  compute_pods.md  logs_evidence.md  signal_extraction.md  sla_pipeline.md  state_database.md  traffic_interface.md
sre_oncall_triage_agent/knowledge/: CLAUDE.md  README.template.md  agent-routing-table.md
sre_oncall_triage_agent/knowledge/references/: .gitignore  (+1 more)
sre_oncall_triage_agent/tools/: README.md  knowledge.md  vm_lookup.py
sre_oncall_triage_sdk/: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
sre_oncall_triage_sdk/eval/cases/: case_clickhouse_connection_refused.yaml  case_false_p99.yaml
sre_oncall_triage_sdk/src/sre_triage/: __init__.py  agent.py  cli.py  config.py
sre_oncall_triage_sdk/src/sre_triage/context/: knowledge.py  manager.py  retriever.py
sre_oncall_triage_sdk/src/sre_triage/eval/: cases.py  runner.py  scorer.py
sre_oncall_triage_sdk/src/sre_triage/llm/: claude_code.py
sre_oncall_triage_sdk/src/sre_triage/observability/: audit.py  metrics.py  trace.py
sre_oncall_triage_sdk/src/sre_triage/safety/: human_gate.py  query_guard.py  scope.py  tier_gate.py
sre_oncall_triage_sdk/src/sre_triage/tools/: base.py  registry.py
sre_oncall_triage_sdk/src/sre_triage/tools/http/: victoriametrics.py
sre_oncall_triage_sdk/src/sre_triage/tools/mcp/: adapter.py
sre_oncall_triage_sdk/tests/: test_agent_loop.py  test_integration.py
(+88 files in other folders)
